objects/gvp__Sales_Goal_Fieldsets__mdt.object
<CustomObject>
    <fields>
        <fullName>gvp__Fieldset_Name__c</fullName>
        <description>Name of the fieldset on the Sales Goal object</description>
        <inlineHelpText>Name of the fieldset on the Sales Goal object</inlineHelpText>
        <label>Fieldset Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gvp__Goal_Level__c</fullName>
        <description>Matches same values on Goal Plan&apos;s Goal Level field</description>
        <label>Unused</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>attr.acct_univ_dim.acct_univ_id</fullName>
                    <default>true</default>
                    <label>Account</label>
                </value>
                <value>
                    <fullName>attr.acct_univ_dim.company_id</fullName>
                    <label>Company</label>
                </value>
                <value>
                    <fullName>attr.acct_univ_dim.division_id</fullName>
                    <label>Division</label>
                </value>
                <value>
                    <fullName>attr.acct_univ_dim.region_id</fullName>
                    <label>Region</label>
                </value>
                <value>
                    <fullName>attr.sales_division_dim.sales_division_dim_id</fullName>
                    <label>Sales Team Division</label>
                </value>
                <value>
                    <fullName>attr.acct_univ_dim.territory_id</fullName>
                    <label>Territory</label>
                </value>
                <value>
                    <fullName>attr.acct_univ_dim.acct_univ_owner_id</fullName>
                    <label>User - Account Owner</label>
                </value>
                <value>
                    <fullName>attr.acct_univ_owner_dim.acct_univ_owner_manager_id</fullName>
                    <label>User - Account Owner Manager</label>
                </value>
                <value>
                    <fullName>attr.person_dim.person_id</fullName>
                    <label>User - Transaction Owner</label>
                </value>
                <value>
                    <fullName>attr.person_dim.person_manager_id</fullName>
                    <label>User - Transaction Owner Manager</label>
                </value>
                <value>
                    <fullName>attr.person_dim.person_role_name</fullName>
                    <label>User - Role</label>
                </value>
                <value>
                    <fullName>attr.account_team_dim.account_team_salesperson_id</fullName>
                    <label>User - Account Team Salesperson</label>
                </value>
                <value>
                    <fullName>attr.account_team_dim.account_team_manager_1_id</fullName>
                    <label>User - Account Team Manager 1</label>
                </value>
                <value>
                    <fullName>attr.account_team_dim.account_team_manager_2_id</fullName>
                    <label>User - Account Team Manager 2</label>
                </value>
                <value>
                    <fullName>attr.account_team_dim.account_team_manager_3_id</fullName>
                    <label>User - Account Team Manager 3</label>
                </value>
                <value>
                    <fullName>User - Transaction Owner (2)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>gvp__Is_Master_Goal_FieldSet__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, record applies to the Master Goal FieldSet.  If not checked, the record applies to the Sales Goal Related List on the Sales Goal Plan visualforce page</description>
        <label>Is Master Goal FieldSet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>gvp__Level__c</fullName>
        <description>Matches same values on Goal Plan&apos;s Goal Level field</description>
        <label>Goal Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>attr.acct_univ_dim.acct_univ_id</fullName>
                    <default>true</default>
                    <label>Account</label>
                </value>
                <value>
                    <fullName>attr.acct_univ_dim.company_id</fullName>
                    <label>Company</label>
                </value>
                <value>
                    <fullName>attr.acct_univ_dim.division_id</fullName>
                    <label>Division</label>
                </value>
                <value>
                    <fullName>attr.acct_univ_dim.region_id</fullName>
                    <label>Region</label>
                </value>
                <value>
                    <fullName>attr.sales_division_dim.sales_division_dim_id</fullName>
                    <label>Sales Team Division</label>
                </value>
                <value>
                    <fullName>attr.acct_univ_dim.territory_id</fullName>
                    <label>Territory</label>
                </value>
                <value>
                    <fullName>attr.acct_univ_dim.acct_univ_owner_id</fullName>
                    <label>User - Account Owner</label>
                </value>
                <value>
                    <fullName>attr.acct_univ_owner_dim.acct_univ_owner_manager_id</fullName>
                    <label>User - Account Owner Manager</label>
                </value>
                <value>
                    <fullName>attr.person_dim.person_dim_id</fullName>
                    <label>User - Transaction Owner</label>
                </value>
                <value>
                    <fullName>attr.person_dim.person_manager_id</fullName>
                    <label>User - Transaction Owner Manager</label>
                </value>
                <value>
                    <fullName>attr.person_dim.person_role_name</fullName>
                    <label>User - Role</label>
                </value>
                <value>
                    <fullName>attr.account_team_dim.account_team_salesperson_id</fullName>
                    <label>User - Account Team Salesperson</label>
                </value>
                <value>
                    <fullName>attr.account_team_dim.account_team_manager_1_id</fullName>
                    <label>User - Account Team Manager 1</label>
                </value>
                <value>
                    <fullName>attr.account_team_dim.account_team_manager_2_id</fullName>
                    <label>User - Account Team Manager 2</label>
                </value>
                <value>
                    <fullName>attr.account_team_dim.account_team_manager_3_id</fullName>
                    <label>User - Account Team Manager 3</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>gvp__RecordType_Name__c</fullName>
        <description>API name of the recordtype on the Sales Goal object</description>
        <inlineHelpText>API name of the recordtype on the Sales Goal object</inlineHelpText>
        <label>RecordType Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Sales Goal Fieldset</label>
    <pluralLabel>Sales Goal Fieldsets</pluralLabel>
</CustomObject>